# dsproj-template

./: README.md  cookiecutter.json  get_dsproj.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.dsproj_name}}/: .env  .gitignore  connect.json  pyproject.toml  requirements.txt
{{cookiecutter.dsproj_name}}/analysis/: monitor.py  report.py
{{cookiecutter.dsproj_name}}/exploration/: explore.py
{{cookiecutter.dsproj_name}}/product/strategy/: Double_Moving_Averaging.py
